addColumn don't works

--- a/src/components/ColumnForm/ColumnForm.module.scss
+++ b/src/components/ColumnForm/ColumnForm.module.scss
@@ -2,10 +2,14 @@
     padding: 10px;
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: center;
+}
+
+span {
+    margin: 1%;
 }
 
 
 @media screen and (min-width: 541px) {
-   
- }
+
+}
