add routing, separate into subpages

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -5,6 +5,9 @@ $color-warning: #e1644e;
 
 $font-text: 'Poppins', sans-serif;
 
+$font-bold: 700;
+$font-light: 400;
+
 $radius: 5px;
 $base-size: 12px;
 $transition: all 0.5s;
