add NavLink to NavBar

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -17,6 +17,10 @@
             &:last-child {
                 margin-right: 0;
             }
+
+            &.linkActive {
+                color: $color-warning;
+            }
         }
 
 }
@@ -30,3 +34,4 @@
     padding: 20px 0;
     margin: 0 auto;
 }
+
