--- a/src/components/Lists/Lists.module.scss
+++ b/src/components/Lists/Lists.module.scss
@@ -1,5 +1,5 @@
 @use "sass:math";
-@import '.././styles/settings.scss';
+@import '../../styles/settings.scss';
 
 .lists {
   margin-top: $base-size * 2;
